--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -71,3 +71,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            BRANCH=${{ github.head_ref }}
+            COMMIT=${{ github.sha }}
+            COMMIT_MSG=${{ github.event.head_commit.message }}
