Fix build error  (#36)

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,8 +80,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            BUILD_DATE=${{ env.BUILD_DATE }}
-            COMMITS=${{ env.COMMITS }}
-            BRANCH=${{ github.ref_name }}
-            COMMIT=${{ github.sha }}
-            COMMIT_MSG=${{ github.event.head_commit.message }}
+            "BUILD_DATE=${{ env.BUILD_DATE }}"
+            "COMMITS=${{ env.COMMITS }}"
+            "BRANCH=${{ github.ref_name }}"
+            "COMMIT=${{ github.sha }}"
