Add interactive container shell
yep

yepv2

yepv3

Build WS URL on server side

Run websocket in init script instead of cron

Fix interactive mode apps in shell

Add WS session check and DB port field

Use magic string for WS authentication

Minor adjustment

Use expect binary to create a PTY

Improve token authentication, memcached added, websocketUrl db field added

minor adjustment

Small css adjustment

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "notifiarr/dockwatch",
     "type": "project",
     "require": {
-        "cboden/ratchet": "^0.4.4"
+        "cboden/ratchet": "^0.4.4",
+        "symfony/process": "^7.2"
     },
     "license": "MIT"
 }
