feat(websocket): add websocket proxy configuration and URL handling
Add a new NGINX location block for proxying WebSocket connections to the local WebSocket server. Simplify WebSocket URL generation in `containers.php` by removing redundant logic and using a consistent base URL. Update WebSocket settings UI to reflect the new URL structure and provide clearer instructions for reverse proxy configurations.

fix: correct websocket availability check logic

fix: websocket url builder

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -114,6 +114,14 @@ http {
             try_files $uri /api/index.php?endpoint=$1&$args;
         }
 
+        location /ws {
+            proxy_pass http://127.0.0.1:9910;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_read_timeout 86400;
+        }
+
         # deny access to .htaccess/.htpasswd files
         location ~ /\.ht {
             deny all;
