fix: add port checks (#66)
refactor: updated nginx and php83 config

refactor: remove docker config warning noise

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -1,7 +1,7 @@
-## Version 2024/05/27 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx/nginx.conf.sample
+## Version 2024/12/17 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx/nginx.conf.sample
 
 ### Based on alpine defaults
-# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.20-stable
+# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.21-stable
 
 user abc;
 
@@ -69,23 +69,32 @@ http {
         '' close;
     }
 
+    # Enable http2 by default for all servers
+    # http2 on;
+
     # Sets the path, format, and configuration for a buffered log write.
     access_log /config/log/nginx/access.log;
 
+    # client_body_temp_path /tmp/nginx 1 2;
+    # proxy_temp_path /tmp/nginx-proxy;
+    # fastcgi_temp_path /tmp/nginx-fastcgi;
+    # uwsgi_temp_path /tmp/nginx-uwsgi;
+    # scgi_temp_path /tmp/nginx-scgi;
+
+    # proxy_cache_path /tmp/nginx-proxy-cache keys_zone=lsio-proxy:10m;
+    # fastcgi_cache_path /tmp/nginx-fcgi-cache keys_zone=lsio-fcgi:10m;
+    # scgi_cache_path /tmp/nginx-scgi-cache keys_zone=lsio-scgi:10m;
+    # uwsgi_cache_path /tmp/nginx-uwsgi-cache keys_zone=lsio-uwsgi:10m;
+
     # Includes virtual hosts configs.
     include /etc/nginx/http.d/*.conf;
+    # include /config/nginx/site-confs/*.conf;
 
-    #include /config/nginx/site-confs/*.conf;
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
 
-        listen 443 ssl http2 default_server;
-        listen [::]:443 ssl http2 default_server;
-
         server_name _;
-
-        include /config/nginx/ssl.conf;
 
         set $root /app/www/public;
         if (!-d /app/www/public) {
@@ -95,10 +104,6 @@ http {
         index index.html index.htm index.php;
 
         location / {
-            # enable for basic auth
-            #auth_basic "Restricted";
-            #auth_basic_user_file /config/nginx/.htpasswd;
-
             try_files $uri $uri/ /index.html /index.php$is_args$args;
         }
 
