--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,8 +24,8 @@ server {
 
     location ^~ /dockwatch/ws {
         set $upstream_app dockwatch;
-        set $upstream_port 10000;
-        set $upstream_proto 80;
+        set $upstream_port 80;
+        set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
